deps/v8/test/message/fail/destructuring-undefined-string-property.out
*%(basename)s:5: TypeError: Cannot destructure property 'x' of 'undefined' as it is undefined.
var { x } = undefined;
      ^
TypeError: Cannot destructure property 'x' of 'undefined' as it is undefined.
    at *%(basename)s:5:7
